+ fix footer content wrapping

--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -2,12 +2,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1.5rem 0;
+  padding: 1.5rem 1.25rem;
   background: rgba($white-color, .75);
   backdrop-filter: blur(5px);
   box-shadow: 0 0 35px -15px rgba($secondary-dark, .5);
   overflow: hidden;
   &__body {
+    text-align: center;
     font-weight: 500;
     font-size: 1.15rem;
     line-height: 1;
